web/themes/custom/unl_five_herbie/css/global.css
/* ... */
/* ---------------- links end----------- */

/* #endregion */


/* #region Card Subhead*/
div.dcf-card.unl-bg-dark-gray div.dcf-card-block .dcf-subhead,
div.dcf-card.unl-bg-scarlet div.dcf-card-block .dcf-subhead
{
  color: #e3e3e2 !important;
}
/* #endregion */

/* #region Person Teaser Icons */
.unl-bg-scarlet .node--type-person a:link,
.unl-bg-scarlet .node--type-person a:visited,
.unl-bg-scarlet .node--type-person a:hover,
.unl-bg-scarlet .node--type-person a:active,
.unl-bg-dark-gray .node--type-person a:link,
.unl-bg-dark-gray .node--type-person a:visited,
.unl-bg-dark-gray .node--type-person a:hover,
.unl-bg-dark-gray .node--type-person a:active
{
  color: #e3e3e2 !important;
}
/* #endregion */

/* #region Button color changes for CTA components if a block background is set to "None" */
div.layout.unl-bg-scarlet div.unlcms-cta-block:not(.unl-bg-scarlet, .unl-bg-dark-gray, .unl-bg-cream, .unl-bg-light-gray, .unl-bg-lighter-gray, .unl-bg-lightest-gray) a.dcf-btn,
div.layout.unl-bg-dark-gray div.unlcms-cta-block:not(.unl-bg-scarlet, .unl-bg-dark-gray, .unl-bg-cream, .unl-bg-light-gray, .unl-bg-lighter-gray, .unl-bg-lightest-gray) a.dcf-btn
{
  background-color: #ebebea;
  border-color: #ebebea;
  color: #d00000;
}

div.layout.unl-bg-scarlet div.unlcms-cta-block:not(.unl-bg-scarlet, .unl-bg-dark-gray, .unl-bg-cream, .unl-bg-light-gray, .unl-bg-lighter-gray, .unl-bg-lightest-gray) a.dcf-btn:hover,
div.layout.unl-bg-scarlet div.unlcms-cta-block:not(.unl-bg-scarlet, .unl-bg-dark-gray, .unl-bg-cream, .unl-bg-light-gray, .unl-bg-lighter-gray, .unl-bg-lightest-gray) a.dcf-btn:active,
div.layout.unl-bg-dark-gray div.unlcms-cta-block:not(.unl-bg-scarlet, .unl-bg-dark-gray, .unl-bg-cream, .unl-bg-light-gray, .unl-bg-lighter-gray, .unl-bg-lightest-gray) a.dcf-btn:hover,
div.layout.unl-bg-dark-gray div.unlcms-cta-block:not(.unl-bg-scarlet, .unl-bg-dark-gray, .unl-bg-cream, .unl-bg-light-gray, .unl-bg-lighter-gray, .unl-bg-lightest-gray) a.dcf-btn:active
{
  background-color: #fff;
  border-color: #fff;
}
/* #endregion */

